eks_ingress/ALB_demo/mail-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: mail-deploy
spec:
   replicas: 3
   selector:
      matchLabels:
           app: mail
      matchExpressions:
      - {key: app, operator: In, values: [ mail ] }
   template:
      metadata:
         name: "mail-pod"
         labels:
            app: mail
            region: IN
      spec:
          containers:
           - name: "mail-container"
             image: "deepak2007/ingress_demo:mail"

---

apiVersion: v1
kind: Service
metadata:
    name: mail-svc
spec:
    type: NodePort
    selector:
        app: mail
    ports:
      - targetPort: 80
        port: 80
        nodePort: 30010
