eks_ingress/ALB_demo/search-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: search-deploy
spec:
   replicas: 3
   selector:
      matchLabels:
           app: search
      matchExpressions:
      - {key: app, operator: In, values: [ search ] }
   template:
      metadata:
         name: "search-pod"
         labels:
            app: search
            tier: frontend
            region: US
      spec:
          containers:
           - name: "search-container"
             image: "deepak2007/ingress_demo:search"

---

apiVersion: v1
kind: Service
metadata:
    name: search-svc
spec:
    type: NodePort
    selector:
        app: search
    ports:
      - targetPort: 80
        port: 80
        nodePort: 31000
