eks_ingress/ALB_demo/alb_ingress_without_ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myalb-ingress
  annotations:
     alb.ingress.kubernetes.io/load-balancer-name: "aws-myalb"
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
     alb.ingress.kubernetes.io/healthcheck-port: traffic-port
     alb.ingress.kubernetes.io/healthcheck-path: /
     alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
     alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
     alb.ingress.kubernetes.io/healthy-threshold-count:   '2'
     alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
     alb.ingress.kubernetes.io/success-codes:  '200'

spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /search
        pathType: Prefix
        backend:
          service:
            name: search-svc
            port:
              number: 80

      - path: /mail
        pathType: Prefix
        backend:
          service:
            name: mail-svc
            port:
              number: 80
