eks_ingress/ALB_demo/ingress_ssl_tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress_ssl
  annotations:
     alb.ingress.kubernetes.io/load-balancer-name: "myalb-ssl"
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
     alb.ingress.kubernetes.io/healthcheck-port: traffic-port
     alb.ingress.kubernetes.io/healthcheck-path: /index.php
     alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
     alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
     alb.ingress.kubernetes.io/healthy-threshold-count:   '2'
     alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
     alb.ingress.kubernetes.io/success-codes:  '200'
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80} ,  {"HTTPS": 443}]'
     alb.ingress.kubernetes.io/certificate-arn: arn:aws:certicaate-apsouth-1
     alb.ingress.kubernetes.io/ssl-redirect:  '443'

spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /search
        pathType: Prefix
        backend:
          service:
            name: search-svc
            port:
              number: 80

      - path: /mail
        pathType: Prefix
        backend:
          service:
            name: mail-svc
            port:
              number: 80
